# SyncD

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  appicon.aps  merge.cpp  merge.h  settings.cpp  settings.h  static.h  syncD.cpp  syncD.h  syncd.cpp  vectorM.h
src/include/: blockScreen.hpp  dirTree.hpp  error.hpp  merge.h  misc.hpp  parser.hpp  settings.h  spinLock.hpp  threadPool.hpp
x64-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
x64-Release/.cmake/api/v1/reply/: cache-v2-479ec388313085f79337.json  cmakeFiles-v1-c81ec90991cafad6b447.json  codemodel-v2-f26db9dc821d761110c1.json  index-2023-01-07T23-51-48-0399.json  target-syncD-Release-b585caa9e5a539a0c03f.json  toolchains-v1-1cdf33f6ce57a6ed8fc9.json
x64-Release/syncDSettings/: settings.txt
